# ElPricesModular

./: CMakeLists.txt  Dockerfile  README.md  elpricemodular.service  elpricesmodular.desktop  historicPrices.csv
FilesToServe/: example.html  index.html  input.html
HistoricData/: Prices.db  Pulses.db
HistoricData/Prices/: 21.12.2024.csv  22.12.2024.csv  23.12.2024.csv  24.12.2024.csv  25.12.2024.csv  26.12.2024.csv  27.12.2024.csv  28.12.2024.csv
Resources/: CeriusFees.json  config.json  historicData.db
scripts/: buildAndRun.py  externals.txt  loadExternalsHTTPS.py  loadExternalsSSH.py
src/: CMakeLists.txt  DataController.cpp  DataController.h  ElPricesModular.cpp  ElPricesModular.h  main.cpp
src/Slides/: BoxBackground.cpp  BoxBackground.h  BoxChart.cpp  BoxChart.h  BoxWith3Texts.cpp  BoxWith3Texts.h  LargePriceGroupColumn.cpp  LargePriceGroupColumn.h  LastLargePriceGroupColumn.cpp  LastLargePriceGroupColumn.h  LoadingSlide.cpp  LoadingSlide.h  MainSlide.cpp  MainSlide.h  SlideTemplate.h  TimeBox.cpp  TimeBox.h
src/Slides/Elements/: BoxBackground.cpp  BoxBackground.h  BoxWith3Texts.cpp  BoxWith3Texts.h  BoxWith4Texts.cpp  BoxWith4Texts.h  TimeBox.cpp  TimeBox.h
